log
Wed 20 Mar 2024 01:58:24 PM UTC: 
 tests:  0|5
total_score: 0/70
b5ec0a7
Wed 20 Mar 2024 02:05:46 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |        *i = i;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
b1f7080
Wed 20 Mar 2024 02:07:44 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
6aa352f
Wed 20 Mar 2024 02:08:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a1029d
Wed 20 Mar 2024 02:08:50 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:13: error: expected expression before ‘int’
   50 |        push(int* i, L)
      |             ^~~
exercises.c:50:8: error: too few arguments to function ‘push’
   50 |        push(int* i, L)
      |        ^~~~
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:6: note: declared here
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |      ^~~~
In file included from test.c:5:
exercises.c:50:23: error: expected ‘;’ before ‘next’
   50 |        push(int* i, L)
      |                       ^
      |                       ;
   51 | 
   52 |        next(L);
      |        ~~~~            
exercises.c:49:13: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |        int* i = (int*)malloc(sizeof(int));
      |             ^
cc1: all warnings being treated as errors
Compilation failed
aeb8a16
Wed 20 Mar 2024 02:08:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:13: error: expected expression before ‘int’
   50 |        push(int* i, L);
      |             ^~~
exercises.c:50:8: error: too few arguments to function ‘push’
   50 |        push(int* i, L);
      |        ^~~~
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:6: note: declared here
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |      ^~~~
In file included from test.c:5:
exercises.c:49:13: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |        int* i = (int*)malloc(sizeof(int));
      |             ^
cc1: all warnings being treated as errors
Compilation failed
b5edce1
Wed 20 Mar 2024 02:09:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:13: error: passing argument 1 of ‘push’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   50 |        push(i, L);
      |             ^
      |             |
      |             int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |           ~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
8c5da9f
Wed 20 Mar 2024 02:09:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:15: error: expected expression before ‘,’ token
   50 |        push(i*, L);
      |               ^
Compilation failed
8274341
Wed 20 Mar 2024 02:09:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:14: error: invalid operands to binary * (have ‘int *’ and ‘List *’)
   50 |        push(i* L);
      |              ^
exercises.c:50:8: error: too few arguments to function ‘push’
   50 |        push(i* L);
      |        ^~~~
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:6: note: declared here
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |      ^~~~
Compilation failed
dc24800
Wed 20 Mar 2024 02:10:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
85412e9
Wed 20 Mar 2024 02:11:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:8: error: variable-sized object may not be initialized
   49 |        int* l[i] = (int*)malloc(sizeof(int));
      |        ^~~
exercises.c:50:21: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |        pushFront(L, i);
      |                     ^
      |                     |
      |                     int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:49:13: error: unused variable ‘l’ [-Werror=unused-variable]
   49 |        int* l[i] = (int*)malloc(sizeof(int));
      |             ^
cc1: all warnings being treated as errors
Compilation failed
6e643a5
Wed 20 Mar 2024 02:11:35 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |        int* i = (int*)malloc(sizeof(int));
      |             ^
cc1: all warnings being treated as errors
Compilation failed
77284ab
Wed 20 Mar 2024 02:12:09 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a3fbc51
Wed 20 Mar 2024 02:16:15 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
fa92ce2
Wed 20 Mar 2024 02:17:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
00b0b0c
Wed 20 Mar 2024 02:17:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0d2ad46
Wed 20 Mar 2024 02:20:42 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:9: error: ‘lista’ undeclared (first use in this function)
   65 |   while(lista != NULL)
      |         ^~~~~
exercises.c:65:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e60058d
Wed 20 Mar 2024 02:21:29 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
c2903d0
